--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,17 @@
                 <scope>compile</scope>
             </dependency>
 
+            <dependency>
+                <groupId>net.sf.jasperreports</groupId>
+                <artifactId>jasperreports</artifactId>
+                <version>6.20.6</version>
+            </dependency>
 
-                <dependency>
+            <dependency>
                     <groupId>org.controlsfx</groupId>
                     <artifactId>controlsfx</artifactId>
                     <version>11.0.0</version>
-                </dependency>
+            </dependency>
 
 
             <dependency>
